tests/baselines/reference/arrayOfSubtypeIsAssignableToReadonlyArray.errors.txt
tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts(13,1): error TS2322: Type 'A[]' is not assignable to type 'ReadonlyArray<B>'.
  Type 'A' is not assignable to type 'B'.
    Property 'b' is missing in type 'A'.
tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts(18,1): error TS2322: Type 'C<A>' is not assignable to type 'ReadonlyArray<B>'.
  Types of property 'concat' are incompatible.
    Type '{ <U>(...items: (ConcatArray<A> | ConcatArray<U>)[]): (A | U)[]; (...items: (A | ConcatArray<A>)[]): A[]; }' is not assignable to type '{ <U>(...items: (ConcatArray<B> | ConcatArray<U>)[]): (B | U)[]; (...items: (B | ConcatArray<B>)[]): B[]; }'.
      Types of parameters 'items' and 'items' are incompatible.
        Type 'B | ConcatArray<B>' is not assignable to type 'ConcatArray<any> | ConcatArray<A>'.
          Type 'B' is not assignable to type 'ConcatArray<any> | ConcatArray<A>'.
            Type 'B' is not assignable to type 'ConcatArray<A>'.
              Property 'length' is missing in type 'B'.


==== tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts (2 errors) ====
    class A { a }
    class B extends A { b }
    class C<T> extends Array<T> { c }
    declare var ara: A[];
    declare var arb: B[];
    declare var cra: C<A>;
    declare var crb: C<B>;
    declare var rra: ReadonlyArray<A>;
    declare var rrb: ReadonlyArray<B>;
    rra = ara;
    rrb = arb; // OK, Array<B> is assignable to ReadonlyArray<A>
    rra = arb;
    rrb = ara; // error: 'A' is not assignable to 'B'
    ~~~
!!! error TS2322: Type 'A[]' is not assignable to type 'ReadonlyArray<B>'.
!!! error TS2322:   Type 'A' is not assignable to type 'B'.
!!! error TS2322:     Property 'b' is missing in type 'A'.
    
    rra = cra;
    rra = crb; // OK, C<B> is assignable to ReadonlyArray<A>
    rrb = crb;
    rrb = cra; // error: 'A' is not assignable to 'B'
    ~~~
!!! error TS2322: Type 'C<A>' is not assignable to type 'ReadonlyArray<B>'.
!!! error TS2322:   Types of property 'concat' are incompatible.
!!! error TS2322:     Type '{ <U>(...items: (ConcatArray<A> | ConcatArray<U>)[]): (A | U)[]; (...items: (A | ConcatArray<A>)[]): A[]; }' is not assignable to type '{ <U>(...items: (ConcatArray<B> | ConcatArray<U>)[]): (B | U)[]; (...items: (B | ConcatArray<B>)[]): B[]; }'.
!!! error TS2322:       Types of parameters 'items' and 'items' are incompatible.
!!! error TS2322:         Type 'B | ConcatArray<B>' is not assignable to type 'ConcatArray<any> | ConcatArray<A>'.
!!! error TS2322:           Type 'B' is not assignable to type 'ConcatArray<any> | ConcatArray<A>'.
!!! error TS2322:             Type 'B' is not assignable to type 'ConcatArray<A>'.
!!! error TS2322:               Property 'length' is missing in type 'B'.
    